# astrognome

./: Makefile.am  configure.ac
src/: Makefile.am  gradix.c
swe-glib/src/: Makefile.am  Makefile.am.withenumtypes  enumtypes.c  enumtypes.c.template  enumtypes.h  enumtypes.h.template  glib-swe.h  glib-sweph.c  prototypes.c  swe-glib-date-time.c  swe-glib-date-time.h  swe-glib.c  swe-glib.h  swetest.c
